# IITF_Project

./: .gitignore  README.md  main.py  pyproject.toml
docs/: project_master_blueprint_dual_trace_v2.md
src/: config.py  data_loader.py  evaluate.py  model.py  trainer.py
tests/: test_data_loader.py  test_model.py
