[project]
name = "iitf-project"
version = "0.1.0"
description = "Infrastructure Intelligence & Telemetry Forecasting (IITF) - Dual-Trace"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "captum>=0.9.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]


